--- a/src/ray/gcs/tests/BUILD.bazel
+++ b/src/ray/gcs/tests/BUILD.bazel
@@ -106,13 +106,12 @@ ray_cc_test(
     ],
     tags = ["team:core"],
     deps = [
-        "//:ray_fakes",
-        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/mock/ray/pubsub:mock_publisher",
         "//src/ray/common:test_utils",
         "//src/ray/gcs:gcs_node_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
         "//src/ray/observability:fake_ray_event_recorder",
+        "//src/ray/rpc:fake_raylet_client",
         "@com_google_googletest//:gtest_main",
     ],
 )
@@ -184,8 +183,6 @@ ray_cc_test(
         "team:core",
     ],
     deps = [
-        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
-        "//src/fakes/ray/rpc/worker:fake_core_worker_client",
         "//src/mock/ray/pubsub:mock_publisher",
         "//src/ray/common:test_utils",
         "//src/ray/gcs:gcs_node_manager",
@@ -195,6 +192,8 @@ ray_cc_test(
         "//src/ray/gcs:gcs_table_storage",
         "//src/ray/gcs/store_client:in_memory_store_client",
         "//src/ray/observability:fake_ray_event_recorder",
+        "//src/ray/rpc:fake_core_worker_client",
+        "//src/ray/rpc:fake_raylet_client",
         "//src/ray/util:counter_map",
         "@com_google_googletest//:gtest_main",
     ],
@@ -208,8 +207,6 @@ ray_cc_test(
     ],
     tags = ["team:core"],
     deps = [
-        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
-        "//src/fakes/ray/rpc/worker:fake_core_worker_client",
         "//src/mock/ray/pubsub:mock_publisher",
         "//src/ray/common:test_utils",
         "//src/ray/gcs:gcs_actor",
@@ -217,6 +214,8 @@ ray_cc_test(
         "//src/ray/gcs:gcs_resource_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
         "//src/ray/observability:fake_ray_event_recorder",
+        "//src/ray/rpc:fake_core_worker_client",
+        "//src/ray/rpc:fake_raylet_client",
         "//src/ray/util:counter_map",
         "@com_google_googletest//:gtest_main",
     ],
@@ -338,9 +337,7 @@ ray_cc_test(
     ],
     tags = ["team:core"],
     deps = [
-        "//:ray_fakes",
         "//:ray_mock",
-        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/ray/common:asio",
         "//src/ray/common:protobuf_utils",
         "//src/ray/common:test_utils",
@@ -349,6 +346,7 @@ ray_cc_test(
         "//src/ray/gcs:gcs_resource_manager",
         "//src/ray/gcs:gcs_store_client_kv",
         "//src/ray/raylet/scheduling:cluster_resource_manager",
+        "//src/ray/rpc:fake_raylet_client",
         "@com_google_googletest//:gtest_main",
     ],
 )
@@ -440,12 +438,12 @@ ray_cc_test(
         "team:core",
     ],
     deps = [
-        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/mock/ray/pubsub:mock_publisher",
         "//src/ray/common:test_utils",
         "//src/ray/gcs:gcs_node_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
         "//src/ray/observability:fake_ray_event_recorder",
+        "//src/ray/rpc:fake_raylet_client",
         "//src/ray/util:string_utils",
         "@com_google_googletest//:gtest",
     ],
