--- a/src/ray/raylet/tests/BUILD.bazel
+++ b/src/ray/raylet/tests/BUILD.bazel
@@ -179,19 +179,19 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         ":util",
-        "//:ray_fakes",
         "//:ray_mock",
-        "//src/fakes/ray/object_manager/plasma:fake_plasma_client",
-        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/ray/common:lease",
         "//src/ray/common:ray_object",
         "//src/ray/common:task_common",
         "//src/ray/common/cgroup2:cgroup_manager_interface",
+        "//src/ray/object_manager/plasma:fake_plasma_client",
         "//src/ray/object_manager/plasma:plasma_client",
         "//src/ray/observability:fake_metric",
+        "//src/ray/pubsub:fake_subscriber",
         "//src/ray/raylet:local_object_manager_interface",
         "//src/ray/raylet:node_manager",
         "//src/ray/raylet/scheduling:cluster_lease_manager",
+        "//src/ray/rpc:fake_raylet_client",
         "//src/ray/util:macros",
         "@com_google_googletest//:gtest_main",
     ],
