--- a/src/ray/core_worker/task_submission/tests/BUILD.bazel
+++ b/src/ray/core_worker/task_submission/tests/BUILD.bazel
@@ -65,15 +65,14 @@ ray_cc_test(
     srcs = ["normal_task_submitter_test.cc"],
     tags = ["team:core"],
     deps = [
-        "//:ray_fakes",
         "//:ray_mock",
-        "//src/fakes/ray/rpc/raylet:fake_raylet_client",
         "//src/ray/common:task_common",
         "//src/ray/common:test_utils",
         "//src/ray/core_worker:fake_actor_creator",
         "//src/ray/core_worker:memory_store",
         "//src/ray/core_worker/task_submission:normal_task_submitter",
         "//src/ray/rpc:core_worker_client",
+        "//src/ray/rpc:fake_raylet_client",
         "//src/ray/rpc:raylet_client_interface",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
