--- a/src/ray/object_manager/plasma/BUILD.bazel
+++ b/src/ray/object_manager/plasma/BUILD.bazel
@@ -52,6 +52,21 @@ ray_cc_library(
 )
 
 ray_cc_library(
+    name = "fake_plasma_client",
+    hdrs = [
+        "fake_plasma_client.h",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":plasma_client_interface",
+        "//src/ray/common:buffer",
+        "//src/ray/common:id",
+        "//src/ray/common:status",
+        "@com_google_absl//absl/container:flat_hash_map",
+    ],
+)
+
+ray_cc_library(
     name = "plasma_client_interface",
     hdrs = ["client.h"],
     deps = [
