--- a/src/ray/object_manager/tests/BUILD.bazel
+++ b/src/ray/object_manager/tests/BUILD.bazel
@@ -36,8 +36,8 @@ ray_cc_test(
     ],
     tags = ["team:core"],
     deps = [
-        "//:ray_fakes",
         "//src/ray/object_manager:ownership_object_directory",
+        "//src/ray/pubsub:fake_subscriber",
         "@com_google_googletest//:gtest_main",
     ],
 )
@@ -113,8 +113,8 @@ ray_cc_test(
     tags = ["team:core"],
     deps = [
         "//:ray_mock",
-        "//src/fakes/ray/object_manager/plasma:fake_plasma_client",
         "//src/ray/object_manager",
+        "//src/ray/object_manager/plasma:fake_plasma_client",
         "//src/ray/rpc/object_manager:fake_object_manager_client",
         "@com_google_googletest//:gtest_main",
     ],
