--- a/src/ray/gcs_client/BUILD.bazel
+++ b/src/ray/gcs_client/BUILD.bazel
@@ -56,8 +56,8 @@ ray_cc_library(
         "//src/ray/common:ray_config",
         "//src/ray/protobuf:autoscaler_cc_grpc",
         "//src/ray/protobuf:gcs_service_cc_grpc",
-        "//src/ray/rpc:client_call",
         "//src/ray/rpc:retryable_grpc_client",
+        "//src/ray/rpc:rpc_types",
         "//src/ray/util:network_util",
         "@com_google_absl//absl/container:btree",
     ],
