--- a/src/ray/core_worker/task_execution/BUILD.bazel
+++ b/src/ray/core_worker/task_execution/BUILD.bazel
@@ -43,7 +43,7 @@ ray_cc_library(
         "//src/ray/common:id",
         "//src/ray/common:task_common",
         "//src/ray/protobuf:common_cc_proto",
-        "//src/ray/rpc:server_call",
+        "//src/ray/rpc:rpc_types",
     ],
 )
 
@@ -53,7 +53,7 @@ ray_cc_library(
     visibility = ["//visibility:private"],
     deps = [
         "//src/ray/common:task_common",
-        "//src/ray/rpc:server_call",
+        "//src/ray/rpc:rpc_types",
     ],
 )
 
@@ -67,7 +67,7 @@ ray_cc_library(
         ":scheduling_util",
         "//src/ray/common:id",
         "//src/ray/common:task_common",
-        "//src/ray/rpc:server_call",
+        "//src/ray/rpc:rpc_types",
         "@com_google_absl//absl/synchronization",
     ],
 )
@@ -87,7 +87,7 @@ ray_cc_library(
         "//src/ray/common:task_common",
         "//src/ray/core_worker:task_event_buffer",
         "//src/ray/protobuf:common_cc_proto",
-        "//src/ray/rpc:server_call",
+        "//src/ray/rpc:rpc_types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
@@ -110,7 +110,7 @@ ray_cc_library(
         "//src/ray/common:task_common",
         "//src/ray/core_worker:task_event_buffer",
         "//src/ray/protobuf:common_cc_proto",
-        "//src/ray/rpc:server_call",
+        "//src/ray/rpc:rpc_types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/synchronization",
