--- a/release/BUILD.bazel
+++ b/release/BUILD.bazel
@@ -753,10 +753,7 @@ py_binary(
 py_binary(
     name = "custom_byod_build_init",
     srcs = ["ray_release/scripts/custom_byod_build_init.py"],
-    data = [
-        "release_data_tests.yaml",
-        "release_tests.yaml",
-    ],
+    data = glob(["release_*.yaml"]),
     exec_compatible_with = ["//:hermetic_python"],
     deps = [
         ":ray_release",
