--- a/src/ray/pubsub/tests/BUILD.bazel
+++ b/src/ray/pubsub/tests/BUILD.bazel
@@ -30,6 +30,7 @@ ray_cc_test(
     srcs = ["pubsub_integration_test.cc"],
     tags = ["team:core"],
     deps = [
+        "//src/ray/common:grpc_util",
         "//src/ray/protobuf:pubsub_cc_grpc",
         "//src/ray/pubsub:publisher",
         "//src/ray/pubsub:subscriber",
