--- a/src/ray/rpc/BUILD.bazel
+++ b/src/ray/rpc/BUILD.bazel
@@ -12,7 +12,7 @@ ray_cc_library(
     hdrs = ["client_call.h"],
     visibility = ["//visibility:public"],
     deps = [
-        ":rpc_types",
+        ":rpc_callback_types",
         "//src/ray/common:asio",
         "//src/ray/common:grpc_util",
         "//src/ray/common:id",
@@ -95,7 +95,7 @@ ray_cc_library(
     hdrs = ["server_call.h"],
     visibility = ["//visibility:public"],
     deps = [
-        ":rpc_types",
+        ":rpc_callback_types",
         "//src/ray/common:asio",
         "//src/ray/common:grpc_util",
         "//src/ray/common:id",
@@ -233,8 +233,8 @@ ray_cc_library(
 )
 
 ray_cc_library(
-    name = "rpc_types",
-    hdrs = ["rpc_types.h"],
+    name = "rpc_callback_types",
+    hdrs = ["rpc_callback_types.h"],
     visibility = ["//visibility:public"],
     deps = [
         "//src/ray/common:status",
