--- a/src/ray/pubsub/BUILD.bazel
+++ b/src/ray/pubsub/BUILD.bazel
@@ -6,7 +6,7 @@ ray_cc_library(
     deps = [
         "//src/ray/common:id",
         "//src/ray/protobuf:pubsub_cc_grpc",
-        "//src/ray/rpc:rpc_types",
+        "//src/ray/rpc:rpc_callback_types",
     ],
 )
 
@@ -18,7 +18,7 @@ ray_cc_library(
         "//src/ray/common:asio",
         "//src/ray/protobuf:pubsub_cc_grpc",
         "//src/ray/pubsub:publisher_interface",
-        "//src/ray/rpc:rpc_types",
+        "//src/ray/rpc:rpc_callback_types",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/synchronization",
@@ -32,7 +32,7 @@ ray_cc_library(
         "//src/ray/common:id",
         "//src/ray/protobuf:common_cc_proto",
         "//src/ray/protobuf:pubsub_cc_grpc",
-        "//src/ray/rpc:rpc_types",
+        "//src/ray/rpc:rpc_callback_types",
     ],
 )
 
@@ -44,7 +44,7 @@ ray_cc_library(
         "//src/ray/common:asio",
         "//src/ray/protobuf:pubsub_cc_grpc",
         "//src/ray/pubsub:subscriber_interface",
-        "//src/ray/rpc:rpc_types",
+        "//src/ray/rpc:rpc_callback_types",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/synchronization",
