--- a/src/ray/gcs/tests/BUILD.bazel
+++ b/src/ray/gcs/tests/BUILD.bazel
@@ -215,8 +215,10 @@ ray_cc_test(
         "//src/ray/gcs:gcs_resource_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
         "//src/ray/observability:fake_ray_event_recorder",
+        "//src/ray/rpc:core_worker_client_pool",
         "//src/ray/rpc:fake_core_worker_client",
         "//src/ray/rpc:fake_raylet_client",
+        "//src/ray/rpc:raylet_client_pool",
         "//src/ray/util:counter_map",
         "@com_google_googletest//:gtest_main",
     ],
@@ -260,6 +262,7 @@ ray_cc_test(
         "//src/ray/gcs:gcs_function_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
         "//src/ray/pubsub:publisher",
+        "//src/ray/rpc:fake_core_worker_client",
         "@com_google_googletest//:gtest_main",
     ],
 )
@@ -425,8 +428,8 @@ ray_cc_test(
         "//src/ray/gcs:gcs_function_manager",
         "//src/ray/gcs/store_client:in_memory_store_client",
         "//src/ray/pubsub:publisher",
-        "//src/ray/rpc:core_worker_client_interface",
         "//src/ray/rpc:core_worker_client_pool",
+        "//src/ray/rpc:fake_core_worker_client",
         "//src/ray/util:event",
         "@com_google_googletest//:gtest_main",
     ],
