--- a/src/ray/raylet/tests/BUILD.bazel
+++ b/src/ray/raylet/tests/BUILD.bazel
@@ -32,6 +32,7 @@ ray_cc_test(
     deps = [
         "//:ray_mock",
         "//src/ray/raylet:worker_pool",
+        "//src/ray/rpc:fake_core_worker_client",
         "//src/ray/util:path_utils",
         "//src/ray/util:raii",
         "@com_google_googletest//:gtest_main",
@@ -56,8 +57,8 @@ ray_cc_test(
         "//src/ray/pubsub:subscriber",
         "//src/ray/raylet:local_object_manager",
         "//src/ray/raylet:worker_pool",
-        "//src/ray/rpc:core_worker_client_interface",
         "//src/ray/rpc:core_worker_client_pool",
+        "//src/ray/rpc:fake_core_worker_client",
         "//src/ray/rpc:grpc_client",
         "@com_google_googletest//:gtest_main",
     ],
@@ -194,6 +195,7 @@ ray_cc_test(
         "//src/ray/raylet/scheduling:cluster_lease_manager",
         "//src/ray/rpc:core_worker_client_pool",
         "//src/ray/rpc:fake_raylet_client",
+        "//src/ray/rpc:utils",
         "//src/ray/util:macros",
         "@com_google_googletest//:gtest_main",
     ],
