--- a/src/ray/core_worker/tests/BUILD.bazel
+++ b/src/ray/core_worker/tests/BUILD.bazel
@@ -55,6 +55,7 @@ ray_cc_test(
         "//src/ray/pubsub:publisher",
         "//src/ray/pubsub:publisher_interface",
         "//src/ray/pubsub:subscriber_interface",
+        "//src/ray/rpc:fake_core_worker_client",
         "@com_google_absl//absl/functional:bind_front",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
@@ -251,7 +252,10 @@ ray_cc_test(
         "//src/ray/object_manager/plasma:fake_plasma_client",
         "//src/ray/observability:fake_metric",
         "//src/ray/pubsub:fake_subscriber",
+        "//src/ray/rpc:core_worker_client_pool",
+        "//src/ray/rpc:fake_core_worker_client",
         "//src/ray/rpc:fake_raylet_client",
+        "//src/ray/rpc:raylet_client_pool",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
     ],
