--- a/doc/BUILD.bazel
+++ b/doc/BUILD.bazel
@@ -108,12 +108,28 @@ py_test(
 )
 
 py_test(
+    name = "map_reduce",
+    size = "medium",
+    srcs = ["test_myst_doc.py"],
+    args = [
+        "--path",
+        "doc/source/ray-core/examples/map_reduce.ipynb",
+    ],
+    data = ["//doc/source/ray-core/examples:core_examples"],
+    main = "test_myst_doc.py",
+    tags = [
+        "exclusive",
+        "team:core",
+    ],
+)
+
+py_test(
     name = "web_crawler",
     size = "medium",
     srcs = ["test_myst_doc.py"],
     args = [
         "--path",
-        "doc/source/ray-core/examples/web-crawler.ipynb",
+        "doc/source/ray-core/examples/web_crawler.ipynb",
     ],
     data = ["//doc/source/ray-core/examples:core_examples"],
     main = "test_myst_doc.py",
