--- a/doc/BUILD.bazel
+++ b/doc/BUILD.bazel
@@ -527,6 +527,8 @@ doctest(
         ],
         exclude = [
             "source/ray-core/handling-dependencies.rst",
+            # The `doc_code/` snippet for `nested-tasks.rst` is tested.
+            "source/ray-core/tasks/nested-tasks.rst",
         ],
     ),
     tags = ["team:core"],
