--- a/release/ray_release/byod/requirements_ml_byod_3.9.in
+++ b/release/ray_release/byod/requirements_ml_byod_3.9.in
@@ -1,5 +1,6 @@
 # Python requirements to run release tests from anyscale byod (gpu type, python 3.9)
 
+-c requirements_compiled.txt
 accelerate
 bitsandbytes
 boto3
