[Core] [Azure] Fix issue where cached config file gets corrupted if cluster config contains path objects (#56589)
Signed-off-by: Mark Rossett <marosset@microsoft.com>

--- a/python/ray/tests/BUILD.bazel
+++ b/python/ray/tests/BUILD.bazel
@@ -751,6 +751,7 @@ py_test_module_list(
     files = [
         "test_autoscaler_gcp.py",
         "test_autoscaler_util.py",
+        "test_azure_path_serialization.py",
     ],
     tags = [
         "exclusive",
