[core] Expose serialized_runtime_info consistently across all public oneevent protos (#56325)
Based on
[this](https://github.com/ray-project/ray/pull/56221#discussion_r2324176414)
discussion we have decided to use `serialized_runtime_info` instead of
`runtime_info` for all definition events. This pr depricates the old
`runtime_info` and uses `serialized_runtime_info`. existing test and
code paths have also been updated

runtime_env_info field in `actor_task_definition_events`,
`driver_job_definition_events` and `task_definition_events` has been
marked as deprecated/removed all together (removed in cases where we are
sure that there are no downstream consumers).

`runtime_env_info` in `task_definition_events` is still being used, so
for the time being the field will still be populated, once the
downstream consumers are updated, we can stop populating this filed.

---------

Signed-off-by: sampan <sampan@anyscale.com>
Co-authored-by: sampan <sampan@anyscale.com>

--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -230,6 +230,7 @@ ray_cc_library(
     name = "task_event_buffer",
     srcs = ["task_event_buffer.cc"],
     hdrs = ["task_event_buffer.h"],
+    copts = ["-Wno-error=deprecated-declarations"],
     visibility = [":__subpackages__"],
     deps = [
         "//src/ray/common:asio",
