--- a/doc/source/ray-overview/examples/entity-recognition-with-llms/containerfile
+++ b/doc/source/ray-overview/examples/entity-recognition-with-llms/containerfile
@@ -2,7 +2,7 @@ FROM anyscale/ray-llm:2.44.1-py311-cu124
 
 COPY python/deplocks/examples/entity_recognition_with_llms/llm_example_py311_cu128.lock .
 
-RUN uv pip install /home/ray/entity_recognition_with_llms_py311_cu128.lock --no-deps
+RUN uv pip install -r /home/ray/entity_recognition_with_llms_py311_cu128.lock --no-deps
 
 # Fast upload/download
 ENV HF_HUB_ENABLE_HF_TRANSFER=1
