--- a/src/ray/common/BUILD.bazel
+++ b/src/ray/common/BUILD.bazel
@@ -415,8 +415,8 @@ ray_cc_library(
 )
 
 ray_cc_library(
-    name = "gcs_callbacks",
-    hdrs = ["gcs_callbacks.h"],
+    name = "gcs_callback_types",
+    hdrs = ["gcs_callback_types.h"],
     deps = [
         "//src/ray/common:status",
     ],
