--- a/.buildkite/build.rayci.yml
+++ b/.buildkite/build.rayci.yml
@@ -112,6 +112,22 @@ steps:
     matrix:
       - "3.11"
 
+  - label: ":tapioca: build: ray-llm-extra py{{matrix}} docker (x86_64)"
+    tags:
+      - python_dependencies
+      - docker
+      - oss
+    instance_type: medium
+    commands:
+      - bazel run //ci/ray_ci:build_in_docker -- docker --python-version {{matrix}}
+        --platform cu12.8.1-cudnn --image-type ray-llm-extra --upload
+    depends_on:
+      - manylinux
+      - forge
+      - ray-llmbaseextra
+    matrix:
+      - "3.11"
+
   - label: ":tapioca: build: ray-ml py{{matrix}} docker (x86_64)"
     tags:
       - python_dependencies
@@ -127,6 +143,26 @@ steps:
       - forge
       - ray-mlcpubase
       - ray-mlcudabase
+    matrix:
+      - "3.9"
+      - "3.10"
+      - "3.11"
+
+  - label: ":tapioca: build: ray-ml-extra py{{matrix}} docker (x86_64)"
+    tags:
+      - python_dependencies
+      - docker
+      - oss
+    instance_type: medium
+    commands:
+      - bazel run //ci/ray_ci:build_in_docker -- docker --python-version {{matrix}}
+        --platform cu12.1.1-cudnn8 --platform cpu --image-type ray-ml-extra
+        --upload
+    depends_on:
+      - manylinux
+      - forge
+      - ray-mlcpubaseextra
+      - ray-mlcudabaseextra
     matrix:
       - "3.9"
       - "3.10"
