--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -135,36 +135,6 @@
 #########################
 # AIR release tests
 #########################
-- name: tune_with_frequent_pausing
-  group: AIR tests
-  working_dir: air_tests
-
-  frequency: nightly-3x
-  team: ml
-
-  cluster:
-    byod:
-      runtime_env:
-        - RAY_memory_usage_threshold=0.5
-        - automatic_object_spilling_enabled=0
-    cluster_compute: frequent_pausing/compute_config_aws.yaml
-
-  run:
-    timeout: 600  # 10min
-    long_running: true
-    script: python frequent_pausing/script.py
-
-  variations:
-    - __suffix__: aws
-    - __suffix__: gce
-      env: gce
-      frequency: manual
-      cluster:
-        cluster_compute: frequent_pausing/compute_config_gce.yaml
-
-  alert: default
-
-
 
 # Ray Train distributed Torch benchmarks
 - name: air_benchmark_torch_mnist_gpu_4x4
@@ -385,6 +355,36 @@
 #######################
 # Tune tests
 #######################
+- name: tune_with_frequent_pausing
+  group: Tune tests
+  working_dir: tune_tests
+
+  frequency: nightly-3x
+  team: ml
+
+  cluster:
+    byod:
+      runtime_env:
+        - RAY_memory_usage_threshold=0.5
+        - automatic_object_spilling_enabled=0
+    cluster_compute: frequent_pausing/compute_config_aws.yaml
+
+  run:
+    timeout: 600  # 10min
+    long_running: true
+    script: python RAY_TRAIN_V2_ENABLED=1 frequent_pausing/script.py
+
+  variations:
+    - __suffix__: aws
+    - __suffix__: gce
+      env: gce
+      frequency: manual
+      cluster:
+        cluster_compute: frequent_pausing/compute_config_gce.yaml
+
+  alert: default
+
+
 - name: tune_rllib_connect_test
   group: Tune tests
   working_dir: ml_user_tests
