--- a/src/ray/rpc/BUILD.bazel
+++ b/src/ray/rpc/BUILD.bazel
@@ -10,7 +10,10 @@ ray_cc_library(
 ray_cc_library(
     name = "client_call",
     hdrs = ["client_call.h"],
-    visibility = ["//visibility:public"],
+    visibility = [
+        ":__pkg__",
+        "//src/ray/core_worker:__pkg__",
+    ],
     deps = [
         ":rpc_callback_types",
         "//src/ray/common:asio",
@@ -42,7 +45,6 @@ ray_cc_library(
     hdrs = ["retryable_grpc_client.h"],
     visibility = ["//visibility:public"],
     deps = [
-        ":client_call",
         ":grpc_client",
         "@com_google_absl//absl/container:btree",
         "@com_google_absl//absl/strings:str_format",
@@ -93,7 +95,7 @@ ray_cc_library(
     name = "server_call",
     srcs = ["server_call.cc"],
     hdrs = ["server_call.h"],
-    visibility = ["__subpackages__"],
+    visibility = ["//visibility:private"],
     deps = [
         ":rpc_callback_types",
         "//src/ray/common:asio",
@@ -133,7 +135,6 @@ ray_cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":grpc_server",
-        ":server_call",
         "//src/ray/protobuf:node_manager_cc_grpc",
         "@com_github_grpc_grpc//:grpc++",
     ],
