[core][actor-event-02] Add RayEventInterface implementations for Actor definition and actor lifecycle events (#56321)
this is part 2 of a series of pr's to add support for Actor execution
and definition events in the new oneevents framework. This pr builds on
top of https://github.com/ray-project/ray/pull/55065

this pr adds implementation of `RayEventInterface` for
`ActorDefinitionEvent` and `ActorLifecycleEvent` and adds a test for the
same.

part 1: defining the schema for `ActorDefinitionEvent` and
`ActorExecutionEvent` https://github.com/ray-project/ray/pull/56221

---------

Signed-off-by: Cuong Nguyen <can@anyscale.com>
Signed-off-by: sampan <sampan@anyscale.com>
Co-authored-by: Cuong Nguyen <can@anyscale.com>
Co-authored-by: sampan <sampan@anyscale.com>

--- a/src/ray/observability/BUILD.bazel
+++ b/src/ray/observability/BUILD.bazel
@@ -88,6 +88,34 @@ ray_cc_library(
 )
 
 ray_cc_library(
+    name = "ray_actor_definition_event",
+    srcs = [
+        "ray_actor_definition_event.cc",
+    ],
+    hdrs = [
+        "ray_actor_definition_event.h",
+    ],
+    deps = [
+        ":ray_event",
+        "//src/ray/protobuf/public:events_actor_definition_event_cc_proto",
+    ],
+)
+
+ray_cc_library(
+    name = "ray_actor_lifecycle_event",
+    srcs = [
+        "ray_actor_lifecycle_event.cc",
+    ],
+    hdrs = [
+        "ray_actor_lifecycle_event.h",
+    ],
+    deps = [
+        ":ray_event",
+        "//src/ray/protobuf/public:events_actor_lifecycle_event_cc_proto",
+    ],
+)
+
+ray_cc_library(
     name = "ray_node_definition_event",
     srcs = [
         "ray_node_definition_event.cc",
