--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -4853,6 +4853,7 @@
   cluster:
     byod:
       type: llm-cu128
+      post_build_script: byod_e2e_audio.sh
     cluster_compute: ci/aws.yaml
 
   run:
