generating lock file
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -4335,6 +4335,7 @@
     byod:
       type: cu123
       post_build_script: byod_e2e_timeseries.sh
+      python_depset: e2e_timeseries_py311_cu123.lock
     cluster_compute: ci/aws.yaml
 
   run:
