--- a/doc/BUILD.bazel
+++ b/doc/BUILD.bazel
@@ -394,6 +394,7 @@ py_test_run_all_subdirectory(
         "exclusive",
         "team:ml",
     ],
+    env = {"RAY_TRAIN_V2_ENABLED": "1"},
 )
 
 # --------------------------------------------------------------------
